# ngn6

./: .env.example  .gitignore  Dockerfile  README.md  STRATEGY_AUDIT_2026-07-10.md  pyproject.toml  requirements.txt
config/: README.md  ngn6.yaml
deployment/: README.md  ngn6-bot.service  ngn6-dashboard.service
ngn6_bot/: README.md  __init__.py  backtest.py  bot.py  charting.py  cli.py  config.py  costs.py  dashboard.py  execution.py  indicators.py  legacy_signal.py  logging_json.py  microstructure_replay.py  models.py  orderbook.py  paper.py  recorder.py  review.py  risk.py  runtime_metadata.py  signals.py  strategy_audit.py  tbank.py  tradeflow.py
ngn6_bot/learning/: README.md  __init__.py  daily_oracle.py  (+12 more)
reference/: README.md
scripts/: README.md  download_tbank_neoassets_history.py  launch-ngn6-dashboard-watchdog.ps1  launch-ngn6-watchdog.ps1  register-ngn6-watchdog-startup.ps1  register-ngn6-watchdog-task.ps1  start-ngn6-dashboard-watchdog.ps1  start-ngn6-watchdog.ps1  stop-ngn6-dashboard-watchdog.ps1  stop-ngn6-watchdog.ps1
tests/: README.md  test_5m_confirmation.py  test_backtest.py  test_config.py  test_config_validation.py  test_costs.py  test_daily_oracle.py  test_feedback_model.py  test_indicators.py  test_legacy_signal.py  test_market_state.py  test_microstructure_replay.py  test_orderbook.py  test_paper.py  test_paper_feedback.py  test_risk.py  test_runtime_metadata.py  test_self_learning_safety.py  test_short_exhaustion_guard.py  test_signals.py  test_strategy_audit.py  test_tbank_migration.py  test_token_normalization.py  test_tradeflow.py  test_training_promotion.py  test_walk_forward.py
(+36 files in other folders)
