[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngn6-bot"
version = "0.1.0"
description = "Intraday NGN6 futures trading bot prototype for MOEX via T-Invest API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn==1.9.0",
    "xgboost==3.3.0",
    "lightgbm==4.6.0",
    "catboost==1.2.10",
    "setuptools<81",
    "optuna>=4.0",
    "hyperopt>=0.2.7",
    "scikit-optimize>=0.10.0",
    "tsfresh>=0.20",
    "feature-engine>=1.8",
    "pandera>=0.20",
    "hypothesis>=6.0",
    "arch>=7.0",
    "ruptures>=1.1",
    "hmmlearn>=0.3",
    "pyod>=2.0",
    "backtesting>=0.3",
    "backtrader>=1.9",
    "quantstats>=0.0.62",
    "PyPortfolioOpt>=1.5",
    "cvxpy>=1.5",
    "yfinance>=0.2",
    "apimoex>=1.4",
    "moexalgo>=2.2",
    "exchange-calendars>=4.5",
    "plotly>=5.0",
    "bokeh>=3.0",
    "altair>=5.0",
    "yellowbrick>=1.5",
    "mlflow-skinny>=2.0",
    "river>=0.22",
    "statsmodels>=0.14",
    "duckdb>=1.1",
    "PyYAML>=6.0",
    "tenacity>=8.2",
    "python-json-logger>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "t-tech-investments>=1.49.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ngn6-bot = "ngn6_bot.cli:main"

[tool.setuptools.packages.find]
include = ["ngn6_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
